# manifest-feature-gen

./: .cspell.json  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  manifest.rs
src/manifest/: base.rs  with_build_script.rs  with_collector.rs
