[package]
name = "manifest-feature-gen"
version = "0.1.2"
edition = "2021"
description = "Feature generator for cargo manifest"
repository = "https://github.com/Perlmint/manifest-feature-gen"
license-file = "LICENSE"
keywords = ["manifest", "feature", "generator"]

[dependencies]
fallible-iterator = "0.3.0"
thiserror = "1.0.37"
toml_edit = { version = "0.21.0" }
