[package]
name = "manifest-feature-gen"
version = "0.1.3"
edition = "2021"
description = "Feature generator for cargo manifest"
repository = "https://github.com/Perlmint/manifest-feature-gen"
license-file = "LICENSE"
keywords = ["manifest", "feature", "generator"]

[dependencies]
fallible-iterator = "0.3.0"
thiserror = "1.0.37"
toml_edit = "0.22.20"
